--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.6
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+
+  fonts:
+
+    - family: Quicksand-Bold
+      fonts:
+        - asset: assets/fonts/Quicksand-Bold.ttf
+    
+    - family: Quicksand-Light
+      fonts:
+        - asset: assets/fonts/Quicksand-Light.ttf
+    
+    - family: Quicksand-Medium
+      fonts:
+        - asset: assets/fonts/Quicksand-Medium.ttf
+
+    - family: Quicksand-Regular
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
+
+    - family: Quicksand-SemiBold
+      fonts:
+        - asset: assets/fonts/Quicksand-SemiBold.ttf
